--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-</head>
-
-<body>
+<%- include("templates/head")  %> 
     <h1>HOLA ESTE ES EL HOME</h1>
     <% for(let i=0; i<lista.length;i++){ %>
         <a href="<%= lista[i] %>">Hola <%= i %></a>
