--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Miguel Angel Amaya Rodriguez" />
-    <meta name="author" content="Christian Javier Ayala Guerra" />
-    <meta name="author" content="Diego José Ayala Guerra" />
-    <meta name="author" content="Luis Alonso Cornejo Jiménez" />
-    <meta name="author" content="Carolina Isabel Pineda Delgado" />
-    <meta name="author" content="José Gustavo Pineda Delgado" />
-    <meta name="author" content="William Enrique Vásquez Mancia" />
-    <meta name="keywords" content="phpfordevs, php, devs" />
-    <meta name="description" content="phpfordevs" />
-    <title>Home</title>
-  </head>
 
-  <body></body>
-</html>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Miguel Angel Amaya Rodriguez" />
+  <meta name="author" content="Christian Javier Ayala Guerra" />
+  <meta name="author" content="Diego José Ayala Guerra" />
+  <meta name="author" content="Luis Alonso Cornejo Jiménez" />
+  <meta name="author" content="Carolina Isabel Pineda Delgado" />
+  <meta name="author" content="José Gustavo Pineda Delgado" />
+  <meta name="author" content="William Enrique Vásquez Mancia" />
+  <meta name="keywords" content="phpfordevs, php, devs" />
+  <meta name="description" content="phpfordevs" />
+  <title>Home</title>
+</head>
+
+<body>
+  <%- include("navbar") %>
