carpeta public agregada, con archivos de ejemplo

--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -14,6 +14,8 @@
   <meta name="author" content="William Enrique Vásquez Mancia" />
   <meta name="keywords" content="phpfordevs, php, devs" />
   <meta name="description" content="phpfordevs" />
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <script src="js/prueba.js"></script>
   <title>Home</title>
 </head>
 
