nav bar responsive y comienzo de index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include("templates/head") %>
-    <h1>HOLA ESTE ES EL HOME</h1>
+    
     <!-- 
         esta es la forma en la que se llama la informacion que se desarrollo en el controlador 
         (esto para ver la informacion mas facil se puede omitir)
@@ -12,5 +12,27 @@
 
         <p><%= data[i] %></p>
     <% } %> -->
-    
+
+   <div class="general">
+        <div class="cuadrados">
+            <a href="#"><p>Cursos</p></a>
+            <img src="/img/gat.png" width="300" height="150" alt="Gato">
+        </div>
+        <div class="cuadrados">
+            <p>Bienvenidos</p>
+        </div>
+        <div class="cuadrados">
+            <a href="#"><p>Cuestionarios</p></a>
+        </div>
+        <div class="cuadrados">
+            <a href="#"><p>Editor y compilador</p></a>
+        </div>
+        <div class="cuadrados">
+            <p>"Inserte su eslogan aqui"</p>
+        </div>
+        <div class="cuadrados">
+            <a href="#"><p>Foro</p></a>
+        </div>
+   </div>
+
 <%- include("templates/footer") %>
