--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -1,3 +1,23 @@
-<nav>
-    <a class="navbar-brand" href="#">Navbar</a>
-</nav>
+<header class="header">
+    <div class="container">
+        <div class="fila align-items-center justify-content-between">
+            <div class="logo">
+                <a href="#">Insertar logo</a>
+            </div>
+            
+            <button type="button" class="nav-toggler">
+                <span></span>
+            </button>
+
+            <nav class="nav">
+                <ul>
+                    <li><a href="#" class="activado">Home</a></li>
+                    <li><a href="#">Editor y compilador</a></li>
+                    <li><a href="#">Cuestionarios</a></li>
+                    <li><a href="#">Foro</a></li>
+                    <li><a href="#">Contactanos</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
