--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,167 @@
-body{
-    background-color: aqua;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
+body{
+    background-color: rgb(255, 255, 255);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/*navbar.ejs*/
+ul{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+.container{
+    max-width: 1170px;
+    margin: auto;
+}
+
+.fila{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.align-items-center{
+    align-items: center;
+}
+
+.justify-content-between{
+    justify-content: space-between;
+}
+
+.header{
+    background-color: #242434;
+    padding: 12px 0;
+    line-height: 1.5;
+}
+
+.header .logo{
+    padding: 0 15px ;
+}
+
+.header .nav{
+    padding: 0 15px ;
+}
+
+.header .nav ul li{
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.header .logo a{
+    font-size: 30px;
+    color: #ffffff;
+}
+
+.header .nav ul li a{
+    display: block;
+    font-size: 16px;
+    color: #ffffff;
+    padding: 10px 0;
+    transition: all 0.5s ease;
+}
+
+.header .nav ul li a.activado,
+.header .nav ul li a:hover{
+    text-decoration: underline;
+}
+
+.nav-toggler{
+    height: 34px;
+    width: 44px;
+    background-color: #ffffff;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    display: none;
+    margin-right:15px;
+}
+
+.nav-toggler:focus{
+    outline: none;
+    box-shadow: 0 0 15px rgb(255, 255, 255,0.6);
+
+}
+
+.nav-toggler span{
+    height: 2px;   
+    width: 20px;
+    background-color: #242434;
+    display: block;
+    margin: auto;
+    position: relative;
+}
+
+.nav-toggler span::before,
+.nav-toggler span::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #242434;
+}
+
+.nav-toggler span::before{
+    transform: translateY(-6px);
+}
+
+.nav-toggler span::after{
+    transform: translateY(6px);
+}
+
+/*Para que sea responsivo*/
+@media(max-width:900px){
+    .nav-toggler{
+        display: block;
+    }
+
+    .header .nav{
+        width: 100%;
+        max-height: 0px;
+        overflow: hidden;
+        visibility: hidden;
+        transition: all 0.3s ease;
+    }
+
+    .header .nav.open{
+        visibility: visible;
+    }
+
+    .header .nav ul{
+        padding: 12px 15px 0;
+        border-top: 1px solid rgb(255, 255, 255,0.2);
+        margin-top: 10px;
+    }
+
+    .header .nav ul li{
+        display: block;
+        margin: 0;
+    }
+}
+
+/*index.ejs*/
+.general{
+    margin: auto;
+    margin-top: 10px;
+    width: 960px;
+    height: 800px;
+    background-color: bisque;
+}
+
+.cuadrados{
+    float: left;
+    width: 300px;
+    background-color: blue;
+    height: 300px;
+    margin: 10px;
+}
+
