--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,17 +47,12 @@ a{
 }
 
 .header .nav{
-    padding: 0 15px ;
+    padding: 0 5px ;
 }
 
 .header .nav ul li{
     display: inline-block;
     margin-left: 40px;
-}
-
-.header .logo a{
-    font-size: 30px;
-    color: #ffffff;
 }
 
 .header .nav ul li a{
@@ -147,6 +142,14 @@ a{
         margin: 0;
     }
 }
+
+/*logo*/
+
+.sizeimage{
+    height: 50px;
+    width: 150px;
+}
+
 
 /*index.ejs*/
 .general{
