--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="fila align-items-center justify-content-between">
             <div class="logo">
-                <a href="#">Insertar logo</a>
+                <a href="#"><img src="/img/PHP_Gris_1.png" class="sizeimage"></a>
             </div>
             
             <button type="button" class="nav-toggler">
