Creacion de archivo css cuestionario

--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -15,6 +15,7 @@
   <meta name="keywords" content="phpfordevs, php, devs" />
   <meta name="description" content="phpfordevs" />
   <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <link rel="stylesheet" type="text/css" href="css/cuestionario.css" />
   <title>Home</title>
 </head>
 
