--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -16,6 +16,7 @@
   <meta name="description" content="phpfordevs" />
   <link rel="stylesheet" type="text/css" href="css/main.css" />
   <link rel="stylesheet" type="text/css" href="css/cuestionario.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   <title>Home</title>
 </head>
 
