--- a/views/templates/cuestionario.ejs
+++ b/views/templates/cuestionario.ejs
@@ -25,19 +25,16 @@
     </header>
     <section>
         <div class="questiontext">
-            <span>Cuanto es 1 + 1?</span>
         </div>
         <div class="optionlist">
-            <div class="option">
+            <!--<div class="option">
                 <span>1</span>
                 <div class="icono cross"><i class="fas fa-times"></i></div>
             </div>
             <div class="option">
                 <span>2</span>
                 <div class="icono check"><i class="fas fa-check"></i></div>
-            </div>
-            <div class="option"><span>3</span></div>
-            <div class="option"><span>4</span></div>
+            </div>-->
         </div>
     </section>
 <!--Footer del cuadro de preguntas-->
