--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,4 +1,21 @@
 
 </body>
+<footer class="footer">
+    <div class="containers">
+        <div class="fila align-items-center justify-content-between">
+              
+                    <ul> 
+                        <li><a href="#"><i class="fab fa-facebook-square"></i></a> 
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                         <a href="#"><i class="fab fa-reddit-square"></i></a>
+                         <a href="mailto:phpfordevs@gmail.com?"><i class="fas fa-envelope"></i></a>
+                        
+                        <li><a href="#">Términos y condiciones</a></li>
+                        <li><a href="#">Acerca de nosotros</a></li>
+                    </ul>
+    </div>
+</footer>
 <script src="js/navbar.js"></script>
+
+
 </html>
