--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="fila align-items-center justify-content-between">
             <div class="logo">
-                <a href="#"><img src="/img/PHP_Gris_1.png" class="sizeimage"></a>
+                <img src="/img/PHP_Gris_1.png" class="sizeimage">
             </div>
             
             <button type="button" class="nav-toggler">
@@ -11,7 +11,7 @@
 
             <nav class="nav">
                 <ul>
-                    <li><a href="#" class="activado">Home</a></li>
+                    <li><a href="#" class="activado"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="#">Editor y compilador</a></li>
                     <li><a href="#">Cuestionarios</a></li>
                     <li><a href="#">Foro</a></li>
