nuevas funcionalidades cuestionario

--- a/public/css/cuestionario.css
+++ b/public/css/cuestionario.css
@@ -10,7 +10,8 @@
 }
 
 .infobox.activeIn,
-.quizbox.activeQu{
+.quizbox.activeQu,
+.resultbox.activeRe{
     z-index: 5;
     transform: translate(-50%, -50%) scale(1);
     opacity: 1;
