--- a/views/templates/cuestionario.ejs
+++ b/views/templates/cuestionario.ejs
@@ -1,4 +1,5 @@
 <!--Boton de inicio-->
+<div class="contenedor">
 <div class="startbtn"><button>Iniciar Cuestionario</button></div>
 <!--Cuadro de informacion-->
 <div class="infobox">
@@ -17,24 +18,17 @@
 <!--Cuadro de preguntas-->
 <div class="quizbox">
     <header>
-        <div class="title">Cuestionario Principiante</div>
+        <div class="title">Cuestionario PHP</div>
         <div class="timer">
             <div class="timertext">Tiempo restante</div>
             <div class="timersec">30</div>
         </div>
+        <div class="time_line"></div>
     </header>
     <section>
         <div class="questiontext">
         </div>
         <div class="optionlist">
-            <!--<div class="option">
-                <span>1</span>
-                <div class="icono cross"><i class="fas fa-times"></i></div>
-            </div>
-            <div class="option">
-                <span>2</span>
-                <div class="icono check"><i class="fas fa-check"></i></div>
-            </div>-->
         </div>
     </section>
 <!--Footer del cuadro de preguntas-->
@@ -52,10 +46,10 @@
     </div>
     <div class="completetext">Has completado el test</div>
     <div class="scoretext">
-        <span><p></p>Obtuviste <p>5</p> de <p>5</p> puntos </span>
     </div>
     <div class="buttons">
         <button class="restart">Reintentar</button>
         <button class="quit">Salir</button>
     </div>
+</div>
 </div>
