--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -15,7 +15,7 @@
   <meta name="keywords" content="phpfordevs, php, devs" />
   <meta name="description" content="phpfordevs" />
   <link rel="stylesheet" type="text/css" href="css/main.css" />
-  <script src="js/prueba.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/cuestionario.css" />
   <title>Home</title>
   <script src="https://kit.fontawesome.com/f9e5d5f13a.js" crossorigin="anonymous"></script>
 </head>
