--- a/views/templates/cuestionario.ejs
+++ b/views/templates/cuestionario.ejs
@@ -30,11 +30,12 @@
         </div>
         <div class="optionlist">
         </div>
+        <div class="optionlist1">
+        </div>
     </section>
 <!--Footer del cuadro de preguntas-->
 <footer class="footercuestionario">
-    <div class="numeropreguntas">
-        
+    <div class="numeropreguntas"> 
     </div>
     <button class="nextbtn">Siguiente Pregunta</button>
 </footer>
