--- a/public/css/main.css
+++ b/public/css/main.css
@@ -217,6 +217,10 @@ a{
         display: block;
         margin: 0;
     }
+    .footer .containers ul li{
+        display: block;
+        
+    }
 }
 
 
