--- a/public/css/main.css
+++ b/public/css/main.css
@@ -139,7 +139,7 @@ a{
     font-size: 16px;
     color: #ffffff;
     padding: 10px 0;
-    transition: all 0.5s ease;
+    transition: 0.5s ;
     
 }
 .footer .containers ul li a i{
@@ -217,19 +217,15 @@ a{
         display: block;
         margin: 0;
     }
-    .containers{
+
+    .footer .containers ul{
         width: 100%;
-        margin: auto;
-       
         display:flex;
         flex-direction: column;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: left;
         align-items: center;
-    }
 
-    .footer .containers ul li{
-        display: block;
         
     }
 }
