--- a/views/templates/cuestionario.ejs
+++ b/views/templates/cuestionario.ejs
@@ -35,9 +35,12 @@
     </section>
 <!--Footer del cuadro de preguntas-->
 <footer class="footercuestionario">
-    <div class="numeropreguntas"> 
-    </div>
+    <div class="numeropreguntas"> </div>
+    <div class="puntaje"></div>
+    <div class="botonesQuiz">
     <button class="nextbtn">Siguiente Pregunta</button>
+    <button class="cancelar">Cancelar Intento</button>
+    </div>
 </footer>
 </div>
 <!--Cuadro de resultado-->
