--- a/views/cuestionarios.ejs
+++ b/views/cuestionarios.ejs
@@ -3,91 +3,99 @@
 <script type="text/javascript" src="js/preguntasIntermedio.js"></script>
 <script type="text/javascript" src="js/preguntasAvanzado.js"></script>
 <script src="js/cuestionarios.js"></script>
-<a href="cuestionarioBasico">
-    <table>
-        <tbody>
-            <tr>
-                <td rowspan="3" id="icono"><i class="fas fa-play-circle"></i></th>
-                <th colspan="2" id="titulo"><p>Cuestionario 1</p></th>
-                <td></td>
-            </tr>
-            <tr>
-                <th></th>
-                <td colspan="2" id="contenido"><p>Contenido: PHP Básico</p></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th></th>
-                <th id="estrellas">
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                </th>
-                <th id="cantPreguntas">
-                    <label id="cantBasico"></label>
-                </th>
-            </tr>
-        </tbody>
-    </table>
-</a>
-<a href="cuestionarioIntermedio">
-    <table>
-        <tbody>
-            <tr>
-                <td rowspan="3" id="icono"><i class="fas fa-play-circle"></i></th>
-                <th colspan="2" id="titulo"><p>Cuestionario 2</p></th>
-                <td></td>
-            </tr>
-            <tr>
-                <th></th>
-                <td colspan="2" id="contenido"><p>Contenido: PHP Intermedio</p></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th></th>
-                <th id="estrellas">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                </th>
-                <th id="cantPreguntas">
-                    <label id="cantIntermedio"></label>
-                </th>
-            </tr>
-        </tbody>
-    </table>
-</a>
-<a href="cuestionarioAvanzado">
-    <table>
-        <tbody>
-            <tr>
-                <td rowspan="3" id="icono"><i class="fas fa-play-circle"></i></th>
-                <th colspan="2" id="titulo"><p>Cuestionario 3</p></th>
-                <td></td>
-            </tr>
-            <tr>
-                <th></th>
-                <td colspan="2" id="contenido"><p>Contenido: PHP Avanzado</p></td>
-                <td></td>
-            </tr>
-            <tr>
-                <th></th>
-                <th id="estrellas">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </th>
-                <th id="cantPreguntas">
-                    <label id="cantAvanzado"></label>
-                </th>
-            </tr>
-        </tbody>
-    </table>
-</a>
+<div class="contenedor">
+    <a href="cuestionarioBasico">
+        <section class="cSection">
+            <table>
+                <tbody>
+                    <tr>
+                        <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
+                        <th colspan="2" class="titulo"><p>Cuestionario 1</p></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td colspan="2" class="contenido"><p>Contenido: PHP Básico</p></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="estrellas">
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </th>
+                        <th class="cantPreguntas">
+                            <label id="cantBasico"></label>
+                        </th>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </a>
+    <a href="cuestionarioIntermedio">
+        <section class="cSection">
+            <table>
+                <tbody>
+                    <tr>
+                        <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
+                        <th colspan="2" class="titulo"><p>Cuestionario 2</p></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td colspan="2" class="contenido"><p>Contenido: PHP Intermedio</p></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="estrellas">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </th>
+                        <th class="cantPreguntas">
+                            <label id="cantIntermedio"></label>
+                        </th>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </a>
+    <a href="cuestionarioAvanzado">
+        <section class="cSection">
+            <table>
+                <tbody>
+                    <tr>
+                        <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
+                        <th colspan="2" class="titulo"><p>Cuestionario 3</p></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td colspan="2" class="contenido"><p>Contenido: PHP Avanzado</p></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="estrellas">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </th>
+                        <th class="cantPreguntas">
+                            <label id="cantAvanzado"></label>
+                        </th>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </a>
+</div>
 <%- include("templates/footer") %>
