--- a/views/cuestionarioBasico.ejs
+++ b/views/cuestionarioBasico.ejs
@@ -1,5 +1,5 @@
 <%- include("templates/head") %>
 <%- include("templates/cuestionario") %>
 <script src="js/preguntasBasico.js"></script>
-<script src="js/cuestionario.js"></script>
+<script src="js/cuestionarioBasico.js"></script>
 <%- include("templates/footer") %>
