--- a/views/templates/cuestionario.ejs
+++ b/views/templates/cuestionario.ejs
@@ -1,5 +1,5 @@
 <!--Boton de inicio-->
-<div class="contenedor">
+<div class="contenedorCuestionario">
 <div class="startbtn"><button>Iniciar Cuestionario</button></div>
 <!--Cuadro de informacion-->
 <div class="infobox">
